@@ -29,6 +29,7 @@
 #include "../filters/armfilter.hpp"
 #include "../filters/lzwfilter.hpp"
 #include "../filters/defaultfilter.hpp"
+#include "../filters/zlibfilter.hpp"
 #include "analyzer.hpp"
 
 class Codec {
